--- a/configs/RCC/hrnet18/SSL_classification_multi.yml
+++ b/configs/RCC/hrnet18/SSL_classification_multi.yml
@@ -1,35 +1,47 @@
 # Setup
-setup: single_task
+setup: multi_task
 
 # Database
-train_db_name: RCCContext_classify
-val_db_name: RCCContext_classify
+train_db_name: RCCContext
+val_db_name: RCCContext
+test_db_name: RCCContext
 trBatch: 8
+#trBatch_classify: 2
 valBatch: 1
+#valBatch_classify: 8
 labeled_bs: 4
 nworkers: 0
 
 # Optimizer and scheduler
-epochs: 60
-optimizer: sgd
+epochs: 100
+optimizer: adam
 optimizer_kwargs:
-   lr: 0.01
+   lr: 0.0001
    weight_decay: 0.0001
-   momentum: 0.9
-   nesterov: False
 scheduler: poly
 
 # Model
 model: baseline
 backbone: hrnet_w18
 backbone_kwargs:
-   pretrained: False
+   pretrained: True
    dilated: False
 head: hrnet
 
 # Tasks
 task_dictionary:
    include_classify: True
+   include_SSL: True
+   edge_w: 0.95
+
+# Loss kwargs
+loss_kwargs:
+   loss_scheme: baseline
+   loss_weights:
+       classify: 1.0
+       SSL_S: 2.0
+       SSL_T: 0.0
+
 
 # Eval only final 10 epochs for speed-up
 eval_final_10_epochs_only: False
