--- a/configs/RCC/hrnet18/SSL_single.yml
+++ b/configs/RCC/hrnet18/SSL_single.yml
@@ -2,34 +2,32 @@
 setup: single_task
 
 # Database
-train_db_name: RCCContext_classify
-val_db_name: RCCContext_classify
+train_db_name: RCCContext
+val_db_name: RCCContext
+test_db_name: RCCContext
 trBatch: 8
 valBatch: 1
 labeled_bs: 4
 nworkers: 0
 
-# Optimizer and scheduler
-epochs: 60
-optimizer: sgd
+epochs: 100
+optimizer: adam
 optimizer_kwargs:
-   lr: 0.01
+   lr: 0.0001
    weight_decay: 0.0001
-   momentum: 0.9
-   nesterov: False
 scheduler: poly
 
 # Model
 model: baseline
 backbone: hrnet_w18
 backbone_kwargs:
-   pretrained: False
+   pretrained: True
    dilated: False
 head: hrnet
 
 # Tasks
 task_dictionary:
-   include_classify: True
+   include_SSL: True
 
 # Eval only final 10 epochs for speed-up
 eval_final_10_epochs_only: False
