--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,89 @@
 torch==1.7.1
 torchvision==0.8.2
-numpy==1.19.2
-tqdm==4.56.0
+numpy==1.19.1
+tqdm==4.50.2
 scipy==1.5.2
-Pillow==8.1.0
+Pillow==7.2.0
+_libgcc_mutex==0.1
+blas==1.0
+ca-certificates==2020.12.8
+ld_impl_linux-ppc64le==2.33.1
+libgfortran-ng==7.3.0
+libstdcxx-ng==8.2.0
+libgcc-ng==8.2.0
+bzip2==1.0.8
+expat==2.2.9
+jpeg==9b
+libffi==3.3
+libopenblas==0.3.10
+lz4-c==1.9.2
+ncurses==6.2
+openssl==1.1.1i
+xz==5.2.5
+yaml==0.2.5
+zlib==1.2.11
+hdf5==1.10.4
+libedit==3.1.20191231
+libpng==1.6.37
+libssh2==1.9.0
+readline==8.0
+rhash==1.3.8
+tk==8.6.10
+zstd==1.4.5
+freetype==2.10.2
+krb5==1.18.2
+libtiff==4.1.0
+sqlite==3.33.0
+lcms2==2.11
+libcurl==7.71.1
+python==3.8.5
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+cloudpickle==1.6.0
+cmake==3.14.0
+decorator==4.4.2
+easydict==1.9
+einops==0.3.0
+idna==2.10
+kiwisolver==1.2.0
+numpy-base==1.19.1
+olefile==0.46
+pycparser==2.20
+pyparsing==2.4.7
+pysocks==1.7.1
+pyyaml==5.3.1
+six==1.15.0
+termcolor==1.1.0
+threadpoolctl==2.1.0
+toolz==0.11.1
+tornado==6.0.4
+tqdm==4.50.2
+typing==3.7.4.3
+wheel==0.35.1
+cffi==1.14.2
+cycler==0.10.0
+cytoolz==0.11.0
+dask-core==2.30.0
+numpy==1.19.1
+pillow==7.2.0
+python-dateutil==2.8.1
+setuptools==49.6.0
+brotlipy==0.7.0
+cryptography==3.3.1
+h5py==2.10.0
+imageio==2.9.0
+joblib==0.16.0
+matplotlib-base==3.3.1
+networkx==2.5
+pip==20.2.2
+pywavelets==1.1.1
+scipy==1.5.2
+tifffile==2020.10.1
+matplotlib==3.3.1
+pyopenssl==20.0.1
+scikit-image==0.17.2
+scikit-learn==0.23.2
+urllib3==1.26.2
+requests==2.25.1
+
